added bakery tag

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
           }
       ],
       "menu": "https://theproofingground.sg/#menu-section",
-      "keywords": "Bread,Sourdough,Shokupan,Kombucha,Kefir,homey,comfort,cosy"
+      "keywords": "Bakery,Bread,Sourdough,Shokupan,Kombucha,Kefir,homey,comfort,cosy"
   }
       </script>
 
